# camcpu

./: CMakeLists.txt  linear.c  main.c  math.c
include/: linear.h  math.h
tests/: test_main.c
